// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-a45d3998-1 dJLsDm undefined "
  >
    <span>
      button test
    </span>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-a45d3998-2 vzblh undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
